# RatSimClient

./: CMakeLists.txt  README.md  package.xml
Rviz/: Test.rviz
grpc/: ProtoGen.sh  RatSim.proto
include/RatSim/: RatSim.grpc.pb.h  RatSim.pb.h
launch/: LidarTest.launch
scripts/: DCTest.py  GRPCClient.py  Lidar_publisher.py  MoveTest.py  RGBCTest.py  RatSim_pb2.py  RatSim_pb2_grpc.py
src/: RatSim.grpc.pb.cc  RatSim.pb.cc  SendPointCloud.cpp  ratsim_lidar.cpp  send_points.cpp
